made some changes to the views and put an indexContainer around everything in ui-view

--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -6,12 +6,12 @@
 <div class="listShowContainer ">
 
   <div>
-    <span class="listTitle">What I want to buy - You currently have {{ usersShow.currentUser.adverts.length }} adverts</span>
+    <span class="listTitle">Preview</span>
     <div class="listShowlisting"  ui-sref="advertsShow({id: advert.id})">
 
     <div class="clearfix">
       <div>
-        <img class="image" src="../images/yabeetwo.png">
+        <img class="image" src="../images/noimage.png">
         </div>
         <div class="content">
           <div class="title">{{ advertsEdit.advert.title }}</div>
