--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -29,9 +29,11 @@
         <hr>
         <h2>Contact Details</h2>
         <h2>Tel. 0{{ advertsShow.advert.user.phoneNumber }}</h2>
-        <div class="editButton" ui-sref="advertsEdit({id: advertsShow.offer.id})">
+        <a href="mailto:{{ advertsShow.advert.user.email }}">
+          <div class="editButton" href="mailto({advertsShow.user.email})">
           Email
-        </div>
+          </div>
+        </a> 
     </div>
   </div>
 
@@ -48,6 +50,7 @@
     <div class="listShowlisting" ng-repeat="offer in advertsShow.offers" >
       <!-- ui-sref="offersShow({id: offer.id})" -->
       <div class="clearfix">
+        <a ui-sref="offersShow({ id: offer.id })">
         <div>
           <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
         </div>
@@ -55,6 +58,7 @@
           <div class="title">{{ offer.title }}</div>
           <span>{{ offer.body | limitTo: 200 }}<span ng-if="offer.body.length > 200">...</span></span><br>
           <!-- id: {{ offer.id }}<br> -->
+        </a>
           <p>£{{ offer.value }}.</p>
           <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button class="messageButton">Contact this seller</button></a>
         </div>
