--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,12 +11,18 @@ $oAuthButton: #b1adb3;
 $tabBackground: #f1f1f1;
 $listShowBorder: #d8d6d9;
 $itemShowText: #3c3241;
+$sentMessage: #ffa2a2;
+$recievedMessage: #8ed68e;
+$inputText: #404a50;
 
 body {
   // width: 80vw;
   margin: 0 auto;
   font-family: 'Source Sans Pro', sans-serif;
   background: $bodyBackground;
+  a {
+    text-decoration: none;
+  }
 }
 
 header {
@@ -83,6 +89,11 @@ header {
     background: $searchButton;
     border: $searchButton;
   }
+}
+
+.indexContainer {
+    width: 1080px;
+    margin: 0 auto;
 }
 
 // this is the section on the homepage with the big buy or sell?? divs
@@ -213,6 +224,12 @@ header {
   border-bottom: 0;
 
   // tab container for the menu tabs at the top of the list
+  a {
+    text-decoration: none;
+  }
+  a:visited {
+    color: #3c3241;
+  }
   .tabContainer {
     width: 100%;
     background: $tabBackground;
@@ -349,7 +366,7 @@ header {
     padding: 0px 8px;
     font-size: 16px;
     border-radius: 3px;
-    color: $searchbar;
+    color: $inputText;
   }
   .inputArea {
     box-sizing: border-box;
@@ -361,7 +378,7 @@ header {
     padding: 0px 8px;
     font-size: 16px;
     border-radius: 3px;
-    color: $searchbar;
+    color: $inputText;
     resize: none;
   }
   .priceInput {
@@ -456,13 +473,36 @@ header {
   overflow: hidden;
 }
 // for messages that appear on the users profile page
+.messagesSection {
+  width: 95%;
+  border: 2px solid $listShowBorder;
+  margin: 0 auto;
+}
+
+.messages {
+  margin-top: 10px;
+  margin-bottom: 2px;
+  border: 2px solid $listShowBorder;
+  padding: 5px 15px;
+  overflow: hidden;
+  width: 60%;
+}
+
 .messages_sent {
-  border-color: red;
-  margin-right: 80px;
+  .title {
+    background-color: $sentMessage;
+    margin: -5px -15px 5px -15px;
+    padding: 3px 0;
+  }
+  // margin-right: 40%;
 }
 .messages_recieved {
-  border-color: green;
-  margin-left: 80px;
+  .title {
+    background-color: $recievedMessage;
+    margin: -5px -15px 5px -15px;
+    padding: 3px 0;
+  }
+  margin-left: 35%;
 }
 
 // used in the results to a new advert page
@@ -476,7 +516,10 @@ header {
   }
 }
 
-
+.collapsed {
+  max-height: 20px;
+  overflow: hidden;
+}
 
 // not sure
 .outline {
