added seaches to adverts and a new button on the search bar to make it work

--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -33,7 +33,7 @@
           <div class="editButton" href="mailto({advertsShow.user.email})">
           Email
           </div>
-        </a> 
+        </a>
     </div>
   </div>
 
@@ -51,16 +51,16 @@
       <!-- ui-sref="offersShow({id: offer.id})" -->
       <div class="clearfix">
         <a ui-sref="offersShow({ id: offer.id })">
-        <div>
-          <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
-        </div>
-        <div class="content">
-          <div class="title">{{ offer.title }}</div>
-          <span>{{ offer.body | limitTo: 200 }}<span ng-if="offer.body.length > 200">...</span></span><br>
-          <!-- id: {{ offer.id }}<br> -->
+          <div>
+            <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
+          </div>
+          <disv class="content">
+            <div class="title">{{ offer.title }}</div>
+            <span>{{ offer.body | limitTo: 200 }}<span ng-if="offer.body.length > 200">...</span></span><br>
+            <!-- id: {{ offer.id }}<br> -->
         </a>
           <p>£{{ offer.value }}.</p>
-          <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button class="messageButton">Contact this seller</button></a>
+          <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button class="oneThirdButton">Contact this seller</button></a>
         </div>
       </div>
     </div>
