--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -1,8 +1,8 @@
 <!--  -->
 <div class="listShowContainer ">
   <div class="tabContainer clearfix">
-    <span class="tab active" ng-class="{active:usersShow.tab == 1}" ng-click="usersShow.setTab(1)">What I'm looking for</span>
-    <span class="tab"></span>
+    <span class="tab active" ng-class="{active:usersShow.tab == 1}" ng-click="usersShow.setTab(1)">I'm looking for</span>
+    <span class="tab" ui-sref="advertsSearch">People are looking for</span>
     <span class="tab"></span>
     <span class="tab"></span>
     <span class="tab"></span>
