--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -54,7 +54,7 @@
           <div>
             <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
           </div>
-          <disv class="content">
+          <div class="content">
             <div class="title">{{ offer.title }}</div>
             <span>{{ offer.body | limitTo: 200 }}<span ng-if="offer.body.length > 200">...</span></span><br>
             <!-- id: {{ offer.id }}<br> -->
