--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -1,8 +1,8 @@
 <!--  -->
 <div class="buyOrSell">
-  <button ui-sref="advertsNew">I'm Buying</button>
+  <button ui-sref="advertsNew" class="buying">Start Buying</button>
 
-  <button ui-sref="offersNew">I'm Selling</button>
+  <button ui-sref="offersNew" class="selling">Start Selling</button>
   <!-- <button ng-click="home.offersNew()">I'm Selling</button> -->
 </div>
 
