--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,9 +25,17 @@ body {
   }
 }
 
+main {
+  max-width: 100vw;
+}
+
 header {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   .development {
     background: red;
+    width:100%;
     display: none;
   }
   .header {
@@ -60,7 +68,7 @@ header {
   }
 }
 
-// search bar on all page
+// search bar on all pages
 .searchBar {
   padding: 20px 0;
   display: inline-block;
@@ -92,27 +100,33 @@ header {
 }
 
 .indexContainer {
-    width: 1080px;
+    max-width: 1080px;
     margin: 0 auto;
 }
 
 // this is the section on the homepage with the big buy or sell?? divs
 .buyOrSell {
+  margin: 60px 0 30px 0;
+  text-align: center;
   button {
     background: inherit;
-
     font-size: 65px;
     font-style: italic;
     border-radius: 15px;
-    border: 2px solid black;
+    border: 2px solid #928e79;
+    color: #5a563e;
     padding: 10px;
     margin: 0 10px;
   }
   :hover {
     cursor: pointer;
   }
-  margin: 60px 0 30px 0;
-  text-align: center;
+  .buying {
+    background: #e28383;
+  }
+  .selling {
+    background: #70e070
+  }
 }
 
 // used for the contaner for the massonry type thing on the homepage
@@ -521,7 +535,7 @@ header {
   overflow: hidden;
 }
 
-// not sure
+// used in advertsShow
 .outline {
   .thumbnail {
     height: 150px;
@@ -534,3 +548,5 @@ header {
   display: table;
   clear: both;
 }
+
+@import "./_mobileStyle.scss"
