readme updated with images

--- a/src/scss/_mobileStyle.scss
+++ b/src/scss/_mobileStyle.scss
@@ -112,7 +112,7 @@
 
   // this is the section on the homepage with the big buy or sell?? divs
   .buyOrSell {
-    margin: 60px 0 30px 0;
+    margin: 20px 0;
     text-align: center;
     button {
       background: inherit;
