trying to get offerSearch tabs working

--- a/src/js/views/adverts/search.html
+++ b/src/js/views/adverts/search.html
@@ -1,7 +1,8 @@
 <!--  -->
 <div class="listShowContainer ">
   <div class="tabContainer clearfix">
-    <span class="tab" ui-sref="offersSearch">I'm looking for</span>
+    <!-- <span class="tab" ui-sref="offersSearch">I'm looking for</span> This will not work without re-submitting the search form -->
+    <span class="tab">I'm looking for</span>
     <span class="tab active">People are looking for</span>
     <span class="tab"></span>
     <span class="tab"></span>
