took a link out of tabbed view on offerShow and advertShow

--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -2,7 +2,7 @@
 <div class="listShowContainer ">
   <div class="tabContainer clearfix">
     <span class="tab active" ng-class="{active:usersShow.tab == 1}" ng-click="usersShow.setTab(1)">I'm looking for</span>
-    <!-- <span class="tab" ui-sref="advertsSearch">People are looking for</span> This won't work without re-submitting the search form-->
+    <!-- <span class="tab" ui-sref="advertsSearch">People are looking for</span> -->
     <span class="tab">People are looking for</span>
     <span class="tab"></span>
     <span class="tab"></span>
